crates/dump/src/reader/compat/snapshots/dump__reader__compat__v4_to_v5__test__compat_v4_v5-12.snap
---
source: dump/src/reader/compat/v4_to_v5.rs
expression: spells.settings().unwrap()
---
{
  "displayedAttributes": "Reset",
  "searchableAttributes": "Reset",
  "filterableAttributes": {
    "Set": []
  },
  "sortableAttributes": {
    "Set": []
  },
  "rankingRules": {
    "Set": [
      "words",
      "typo",
      "proximity",
      "attribute",
      "sort",
      "exactness"
    ]
  },
  "stopWords": {
    "Set": []
  },
  "synonyms": {
    "Set": {}
  },
  "distinctAttribute": "Reset",
  "typoTolerance": {
    "Set": {
      "enabled": {
        "Set": true
      },
      "minWordSizeForTypos": {
        "Set": {
          "oneTypo": {
            "Set": 5
          },
          "twoTypos": {
            "Set": 9
          }
        }
      },
      "disableOnWords": {
        "Set": []
      },
      "disableOnAttributes": {
        "Set": []
      }
    }
  },
  "faceting": "NotSet",
  "pagination": "NotSet"
}
